changed Organisation name

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fraud Call Detection - GSLab Hackathon 2024</title>
+    <title>Fraud Call Detection - GSLab|GAVS Hackathon 2024</title>
     <link rel="stylesheet" type="text/css" href="static/main.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
     <div class="description">
         <h2>About the Application</h2>
         <p>This application is designed to detect fraudulent calls by analyzing audio recordings. Upload an audio file to see if it is classified as a fraud call or a normal call.</p>
-        <p><strong>Project for GSLab Hackathon 2024</strong></p>
-        <p>We developed this project as part of the GSLab Hackathon 2024, showcasing our innovative approach to fraud detection using speech recognition and machine learning techniques.</p>
+        <p><strong>Project for GSLab|GAVS Hackathon 2024</strong></p>
+        <p>We developed this project as part of the GSLab|GAVS Hackathon 2024, showcasing our innovative approach to fraud detection using speech recognition and machine learning techniques.</p>
     </div>
 </div>
 
@@ -33,7 +33,7 @@
 </div>
 
 <div class="footer">
-    <p>&copy; 2024 GSLab Hackathon</p>
+    <p>&copy; 2024 GSLab|GAVS Hackathon</p>
 </div>
 
 <script>
